kubernetes/infrastructure/cluster-policies/disable-default-sa-automount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disable-default-sa-automount
  annotations:
    policies.kyverno.io/title: Disable Default ServiceAccount Automount
    policies.kyverno.io/category: CIS
    policies.kyverno.io/description: >-
      CIS Kubernetes benchmark 5.1.6: Ensure that Service Account Tokens
      are only mounted where necessary.
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
    - name: disable-automount
      match:
        any:
          - resources:
              kinds: [ServiceAccount]
              names: [default]
      mutate:
        patchStrategicMerge:
          automountServiceAccountToken: false
